--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,4 +1,4 @@
-VBAN.src="VBAN Source"
+VBAN.src="VBAN Audio Source"
 VBAN.src.prop.port="Port"
 VBAN.src.prop.ip_from="IP Address From"
 VBAN.src.prop.stream_name="Stream Name"
