--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -2,3 +2,15 @@ VBAN.src="VBAN Audio Source"
 VBAN.src.prop.port="Port"
 VBAN.src.prop.ip_from="IP Address From"
 VBAN.src.prop.stream_name="Stream Name"
+
+VBAN.out="VBAN Audio Output"
+VBAN.out.prop.port="Port"
+VBAN.out.prop.ip_to="IP Address To"
+VBAN.out.prop.stream_name="Stream Name"
+VBAN.out.prop.mixer="Track"
+VBAN.out.prop.frequency="Sampling Rate"
+VBAN.out.prop.frequency.default="Same as OBS Studio"
+VBAN.out.prop.format_bit="Format"
+VBAN.out.prop.format_bit.int16="16-bit Integer"
+VBAN.out.prop.format_bit.int24="24-bit Integer"
+VBAN.out.prop.format_bit.flt32="32-bit Floating Point"
