Implement filter output

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -14,3 +14,5 @@ VBAN.out.prop.format_bit="Format"
 VBAN.out.prop.format_bit.int16="16-bit Integer"
 VBAN.out.prop.format_bit.int24="24-bit Integer"
 VBAN.out.prop.format_bit.flt32="32-bit Floating Point"
+
+VBAN.flt="VBAN Audio Output"
